@@ -226,3 +226,4 @@ b75c43797e817529d486be640232d708  lftp-4.8.4.tar.xz
 4ec8084ff2c1a04ac3879a3278b96f04  node_exporter-1.0.0.linux-amd64.tar.xz
 a5060b974950f83dc825a6fb3de18b61  libcap-2.36.tar.gz
 de92b6cec8c1da36d3da9bd1dd02d450  sedutil-master_20201026.tar.xz
+12250299825966c04713252f88ae92e0  sdparm-1.11.tar.xz
