@@ -226,3 +226,4 @@ c6c56eeb4e63e501a193dac42f6c2c134173942f2a8f8952cddf278981da23de  iotop-master_2
 bac5f7f01bacf99a8d20493cc27934c48901164d5230dd8b6cafc63b69273759  node_exporter-1.0.0.linux-amd64.tar.xz
 dd4397ab51bcde65c61d0d1461f93d1f44362edaac6e23591801f391e844d582  libcap-2.36.tar.gz
 161e4e20d2e1c615c91925d0e59730747c0b8c6c0050462006f81e47b8941cc8  sedutil-master_20201026.tar.xz
+483931fc636794d898549706ae247d7cfdd047a9b517b7d856ff102e386112db  sdparm-1.11.tar.xz
